<resources>
    <string name="app_name">PayPal Rechner</string>
    <string name="amountLbl">Betrag</string>
    <string name="amountTv">45,99</string>
    <string name="paymentTypeLbl">Zahlungsart</string>
    <string name="calcBtn">Berechnen</string>
    <string name="disclaimerLbl">Alle Berechnungen laut PayPal (DE) Gebühreninformation.\n Berechnungen können abweichen. Stand: 01.06.2022</string>
    <string name="feesLbl">PayPal Gebühren</string>
    <string name="feesTvEg">-2,50</string>
    <string name="amountAfterFeesTvEg">19,99</string>
    <string name="amountAfterFeesLbl">Restbetrag</string>
    <string name="amountWithFeesLbl">Betrag mit Gebühren</string>
    <string name="amountWithFeesTvEg">23,20</string>
    <string name="amountWithFeesInfoTvEg">Information</string>

    <string-array name="spinnerPaymentType">
        <item>Ware oder Dienstleistung</item>
        <item>Freunde und Familie</item>
        <item>Spenden</item>
        <item>Mikrozahlung</item>
        <item>Händlerkonditionen 5.001€ - 25.000€</item>
        <item>Händlerkonditionen über 25.000€</item>
    </string-array>
</resources>