<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/feesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/feesLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feesLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feesTvEg"
            android:textColor="#F44336"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amountAfterFeesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feesLayout">

        <TextView
            android:id="@+id/amountAfterFeesLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountAfterFeesLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amountAfterFeesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountAfterFeesTvEg"
            android:textColor="#43A047"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amountWithFeesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountAfterFeesLayout">

        <TextView
            android:id="@+id/amountWithFeesLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountWithFeesLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amountWithFeesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountWithFeesTvEg"
            android:textColor="#43A047"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/amountWithFeesInfoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountWithFeesInfoTvEg"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>