<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/amountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/amountLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amountLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amountTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:ems="10"
            android:hint="@string/amountTv"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="24sp"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paymentTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLayout">

        <TextView
            android:id="@+id/paymentTypeLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paymentTypeLbl"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/paymentTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerPaymentType"
            android:minHeight="54dp" />
    </LinearLayout>

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        android:text="@string/calcBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTypeLayout" />

    <TextView
        android:id="@+id/disclaimerLbl"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/disclaimerLbl"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>